# Application-of-Pareto-Front-to-Multi-Objective-Genetic-Optimization

./: Procedures&Encoding.md  README.md  genetic algo test.ipynb  optimizer.py  pyproject.toml
omfe/: Visualize.py  __main__.py  benchmark.py  benchmark_bnh.py  benchmark_chankong_haimes.py  evaluator.py  genetic algo test.ipynb  graymapping.py  mga.py  mga_alt.py  mga_nondominatedsort_vizualazation_ChankongHaimes copy.ipynb  mga_vizualazation.ipynb  mga_vizualazation_ChankongHaimes.ipynb  mga_vizualazation_bihnkorn.ipynb  optimizer.py  problems.py  ranking.py  tournament_selector.py  tournament_selector_vizu.ipynb  util_functions.py  visualize.py
omfe/visualize/: VisualizePlot.py  mga_nondominatedsort_vizualazation_ChankongHaimes copy.ipynb  mga_vizualazation_bihnkorn.ipynb  tournament_selector_vizu.ipynb
tests/: test_evaluator.py  test_graymapper.py  test_nondominated_evaluator.py  test_omfe.py  test_ranking.py
