[tool.poetry]
name = "omfe"
version = "0.1.0"
description = "Application of Pareto Front to Multi-Objective Genetic Optimization"
authors = ["Max Stabel <M4a1x@users.noreply.github.com>", "Hjalti Thrastarson <HjaltiThrastarson@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest-cov = "^3.0.0"
pytest-black = "^0.3.12"
pytest-xdist = "^2.5.0"
numpy = "^1.22.3"
scipy = "^1.8.0"
matplotlib = "^3.5.2"
ipython = "^8.3.0"
jupyter = "^1.0.0"
pandas = "^1.4.2"
sympy = "^1.10.1"
nose = "^1.3.7"
pymoo = "^0.5.0"

[tool.poetry.dev-dependencies]
rope = "^1.0.0"
pytest = "^6.2"
black = "^22.3.0"
pylint = "^2.13.8"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
